# Drosophila

./: .gitignore  Cargo.toml  build.rs  drosophila-windows.spec  io.github.ergolyam.Drosophila.yml  readme.md  release.toml
.github/docs/: development-linux.md  development-windows.md
.github/workflows/: appimage-publish.yml  build.yml  ci.yml  flatpak-publish.yml  release.yml  windows-publish.yml
docs/: development-linux.md  development-windows.md
flatpak/: cargo-sources.json  dconf-user-config-dir.patch  io.github.ergolyam.Drosophila.yml  yggdrasil-modules.txt  yggdrasil-modules.yaml  yggstack-modules.txt  yggstack-modules.yaml
repo/: summary  summary.idx  summary.idx.sig  summary.sig
repo/summaries/: 0daffc141a2a1a87d55a89e53c0ab66fba0c8331b945b0d430762c00ac471bed-07ddc4eb2fe15bc8c0bca905a39fa2c92aa6c50a9737d0df27b1d7af8b5d6506.delta  0daffc141a2a1a87d55a89e53c0ab66fba0c8331b945b0d430762c00ac471bed-2af4c9e270560268b39593ebb9d02307f4912f698282c47af1a46cd6bfd1f8d9.delta  0daffc141a2a1a87d55a89e53c0ab66fba0c8331b945b0d430762c00ac471bed-33cf0cd1c6c075daee8cf5561fe4a3bea4f80d04122ccfed1d48956f1cc4b40b.delta  0daffc141a2a1a87d55a89e53c0ab66fba0c8331b945b0d430762c00ac471bed-4df48401667ef306f4e0a7cfbd4e525aef29032df4b11880f87eb73fbaf4f7b2.delta  0daffc141a2a1a87d55a89e53c0ab66fba0c8331b945b0d430762c00ac471bed-74c73426b1abff4b09eacaa8b99cb18922d9a4f6b4b076ffe4462ac670035f05.delta  10b56837df5f337cbaf9fb853123c7197d989ec1e40afc8cded2dc2e523b02db-07ddc4eb2fe15bc8c0bca905a39fa2c92aa6c50a9737d0df27b1d7af8b5d6506.delta  (+23 more)
resources/: about_dialog.ui  main.ui  peer_discovery.ui  settings.ui  ui.ui
src/: app.rs  backend.rs  config.rs  discovery.rs  main.rs  privileged.rs  privileged_disabled.rs  proxy.rs  system_proxy.rs  windows_console.rs
src/resources/: peer_dialog.ui
xdg/: io.github.ergolyam.Drosophila.desktop  io.github.ergolyam.Drosophila.metainfo.xml  io.github.ergolyam.Drosophila.policy
yggui/: __main__.py
(+144 files in other folders)
