[package]
name = "drosophila"
version = "2.1.0"
edition = "2024"
rust-version = "1.92"
description = "Native GTK frontend for an embedded Yggdrasil-ng node"
license = "GPL-3.0-or-later"
repository = "https://github.com/ergolyam/Drosophila"
build = "build.rs"

[features]
default = ["tun"]
tun = ["dep:capctl", "dep:nix", "dep:runas", "yggdrasil/tun"]

[dependencies]
anyhow = "1"
directories = "6"
futures = "0.3"
gtk = { package = "gtk4", version = "0.11", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.9", features = ["v1_6"] }
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tokio-smoltcp = { version = "0.6", default-features = false, features = ["proto-ipv4", "proto-ipv6"] }
tokio-util = { version = "0.7", features = ["codec", "rt"] }
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
yggdrasil = { git = "https://github.com/Revertron/Yggdrasil-ng.git", rev = "3ac41c1977d6b309a3901aaf2e5db8fe22f27475", default-features = false, features = ["ws", "quic"] }

[target.'cfg(target_os = "linux")'.dependencies]
capctl = { version = "0.2", optional = true }
nix = { version = "0.30", default-features = false, features = ["user"], optional = true }

[target.'cfg(windows)'.dependencies]
runas = { version = "1.2", optional = true }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Networking_WinInet", "Win32_System_Console"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
